# Peeling_the_Longest

./: README.md
Noise_Removal/: CMakeLists.txt  Information.txt  License.txt  script.sh  simplify.cpp
Noise_Removal/Input_Files/: Figure12,13.txt  Figure14m.txt  Figure14n.txt  Figure15.txt  Figure19a.txt  Figure19b.txt  Figure19c.txt  Figure20a.txt  Figure20b.txt  Figure20c.txt  Figure21a.txt  Figure21b.txt  Figure21c.txt  Figure22a.txt  Figure22b.txt  Figure22c.txt  Figure24.txt
Reconstruct/: CMakeLists.txt  Information.txt  reconstruct.cpp  script.sh
Reconstruct/Input_Files/: Figure1.txt  Figure10.txt  Figure12.txt  Figure14a.txt  Figure14b.txt  Figure14c.txt  Figure14d.txt  Figure14e.txt  Figure14k.txt  Figure14l.txt  Figure14m.txt  Figure14n.txt  Figure14o.txt  Figure15.txt  Figure16.txt  Figure17a.txt  Figure17b.txt  Figure17c.txt  Figure17d.txt  Figure17e.txt  Figure17f.txt  Figure17g.txt  Figure17h.txt  Figure18a.txt  Figure18b.txt  Figure18c.txt  Figure19a.txt  Figure19b.txt  Figure19c.txt  Figure2.txt  Figure20a.txt  Figure20b.txt  Figure20c.txt  Figure21a.txt  Figure21b.txt  Figure21c.txt  Figure22a.txt  Figure22b.txt  Figure22c.txt  Figure23a.txt  (+7 more)
